<resources>
    <string name="app_name">AndroidFIT</string>

        <string name="action_settings">Settings</string>
        <string name="hello_world">Hello world!</string>
        <string name="timerVal">00:00:00</string>
        <string name="pauseButtonLabel">Pause</string>
        <string name="startButtonLabel">Start</string>
    <string name="exe_id">Exercie Name</string>
    <string name="sets">Sets</string>
    <string name="lbs">lbs</string>
</resources>
