<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#a49d9d"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/timerValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="#ffffff"
        android:text="@string/timerVal"
        android:layout_gravity="center_horizontal"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/startButton"
        android:layout_width="90dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/startButtonLabel" />
    <Button
        android:id="@+id/lapButton"
        android:layout_width="90dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="Lap"
        />

    <Button
        android:id="@+id/pauseButton"
        android:layout_width="90dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/pauseButtonLabel" />
</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/cons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>
</ScrollView>

    </LinearLayout>


</LinearLayout>